<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/login_header"
        android:textColor="#90ffffff"
        android:textSize="30dp"
        android:textStyle="bold"
        android:drawableEnd="@drawable/ic_baseline_chat_24"
        android:drawablePadding="10dp"
        />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginHeader"
        android:layout_margin="10dp"
        android:background="#30ffffff"
        android:hint="@string/login_etUsername"
        android:padding="20dp"
        android:textColor="@color/color_text_main"
        android:textColorHint="@color/color_hint_main"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/login_etPassword"
        android:padding="20dp"
        android:textColor="@color/color_text_main"
        android:textColorHint="@color/color_hint_main"
        android:inputType="textPassword"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/login_loginBtn"
        app:backgroundTint="#4C5DBC" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerText"
        android:text="@string/login_notRegisteredText"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@id/loginBtn" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_registerBtn"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_below="@id/registerText"
        android:textSize="10sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/login_registerBtn"
        app:backgroundTint="#8DABA4B3" />
</RelativeLayout>